tests/checker/fail/literal_dispatch_missing_catchall.can
Routed = (String) => String {
    String -> (
        * "/a" => String { "a" }
        * "/b" => String { "b" }
    )
}

Unit => Program {
    "/a" -> Routed -> Print
}
